--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
-@charset "utf-8"
+@charset "utf-8";
 /* CSS Document */
 body{
     background-color:blue;
     font-weight: bold;
-    font-size:18px
+    font-size:18px;
     color: #F00;
-}            
+}          
